more monkeying with math

--- a/efficiency.Rmd
+++ b/efficiency.Rmd
@@ -141,10 +141,10 @@ substring(address[1], startIndices, startIndices + 1)
 a test of independence in a contingency table:
 
 \[
-\chi^{2}=\sum_{i}\sum_{j} ( (y_{ij}-e_{ij})^{2} ) / e_{ij},\,\,\,\, e_{ij}= ( y_{i\cdot}y_{\cdot j} ) / y_{\cdot\cdot}
+\chi^{2}=\sum_{i}\sum_{j} ( (y_{i,j}-e_{i,j})^{2} ) / e_{i,j},\,\,\,\, e_{i,j}= ( y_{i\cdot}y_{\cdot j} ) / y_{\cdot\cdot}
 \]
 
-where $y_{i\cdot}=\sum_{j}y_{ij}$ and $y_{\cdot j} = \sum_{i} y_{ij}$. Write this in a vectorized way
+where $y_{i\cdot}=\sum_{j}y_{i,j}$ and $y_{\cdot j} = \sum_{i} y_{i,j}$. Write this in a vectorized way
 without any loops.  Note that 'vectorized' calculations also work
 with matrices and arrays.
 
@@ -326,7 +326,7 @@ Why is the second order much faster?
 We can use the matrix direct product (i.e., `A*B`) to do
 some manipulations much more quickly than using matrix multiplication.
 **Challenge**: How can I use the direct product to find the trace
-of a matrix, `XY`? 
+of a matrix, `trace(XY)`? 
 
 Finally, when working with diagonal matrices, you can generally get much faster results by being smart. The following operations: `X+D`, `DX`, `XD`
 are mathematically the sum of two matrices and products of two matrices.
